New Crowdin updates (#2057)
* New translations: mobile-misc.yaml (Chinese Simplified)

* New translations: mobile-misc.yaml (Kannada)

* New translations: mobile-misc.yaml (Spanish)

* New translations: mobile-misc.yaml (Bulgarian)

* New translations: mobile-misc.yaml (Turkish)

* New translations: mobile-misc.yaml (Breton)

* New translations: mobile-misc.yaml (Lithuanian)

* New translations: mobile-misc.yaml (Malayalam)

* New translations: mobile-misc.yaml (Uzbek)

* New translations: mobile-misc.yaml (Odia)

* New translations: mobile-misc.yaml (Ukrainian)

* New translations: mobile-misc.yaml (Odia)

* New translations: mobile-misc.yaml (Hebrew)

* New translations: mobile-misc.yaml (Albanian)

* New translations: mobile-misc.yaml (Persian)

* New translations: mobile-misc.yaml (Latin)

* New translations: mobile-misc.yaml (Vietnamese)

* New translations: mobile-misc.yaml (Persian)

* New translations: mobile-misc.yaml (Swahili)

* New translations: mobile-misc.yaml (Hebrew)

* New translations: mobile-misc.yaml (Chinese Traditional)

* New translations: mobile-misc.yaml (Japanese)

* New translations: mobile-misc.yaml (Aragonese)

* New translations: mobile-misc.yaml (Telugu)

* New translations: mobile-misc.yaml (Spanish)

* New translations: mobile-misc.yaml (Tamil)

* New translations: mobile-misc.yaml (Hungarian)

* New translations: mobile-misc.yaml (Korean)

* New translations: mobile-misc.yaml (German)

--- a/translation/dest/an-ES/mobile-misc.yaml
+++ b/translation/dest/an-ES/mobile-misc.yaml
@@ -1,6 +1,10 @@
 an-ES:
   apiUnsupported: "La tuya versión de l'app de lichess ye masiau viella! Esviella-la descargando de gratis la zaguera versión."
   apiDeprecated: "Actualización de gratis a la zaguera app de lichess! Esta versión deixará de tener soporte lo %s."
+  comments: "Comentarios"
+  gameInformation: "Información d'o chuego"
+  home: "Inicio"
+  lastScore: "Zaguera puntuación: %s"
   playerisInvitingYou: "%s te ye convidando"
   unsupportedVariant: "La variant %s no ye compatible con esta versión"
   notesSynchronizationHasFailed: "La sincronización d'anotacions con Lichess ha fallau. Torna-lo a prebar mas tarde."
@@ -12,3 +16,10 @@ an-ES:
   positionRight: "Dreita" #As in "right-hand side"; not truth, morality, or law
   positionLeft: "Zurda" #As in "left-hand side"; not political or past participle
   landscapeBoardSide: "Plazamiento de l'escaquero (en modo horizontal)" #Side of the screen the board appears on in analysis or online rounds when the device is in landscape mode.
+  toggleSound: "Activar/Desactivar sons" #Settings to enable/disable sound
+  overTheBoard: "Chugar sobre lo escaquero"
+  sharePgn: "Compartir PGN"
+  shareGameUrl: 'Compartir lo vinclo d''a partida'
+  playOnline: "Chugar en linia"
+  playOffline: "Chugar sin connexión"
+  bgThemeSyncWithSystem: "Sincronizar con o sistema" #Settings to synchronise background theme (dark or light) with the operating system (to support daynight automatic switch)
