--- a/translation/dest/es-ES/mobile-misc.yaml
+++ b/translation/dest/es-ES/mobile-misc.yaml
@@ -22,3 +22,4 @@ es-ES:
   shareGameUrl: 'Compartir enlace de la partida'
   playOnline: "Jugar en línea"
   playOffline: "Jugar sin conexión"
+  bgThemeSyncWithSystem: "Usar el tema del sistema" #Settings to synchronise background theme (dark or light) with the operating system (to support daynight automatic switch)
