--- a/translation/dest/ta-IN/mobile-misc.yaml
+++ b/translation/dest/ta-IN/mobile-misc.yaml
@@ -1,2 +1,8 @@
 ta-IN:
+  apiUnsupported: "\nஉங்கள் lichess பயன்பாட்டின் பதிப்பு மிகவும் பழையது! சமீபத்திய பதிப்பிற்கு இலவசமாக மேம்படுத்தவும்"
+  comments: "கருத்துகள்"
+  gameInformation: "விளையாட்டு தகவல்"
+  home: "Home"
+  lastScore: "கடைசி மதிப்பெண்"
+  playerisInvitingYou: "உங்களை அழைக்கிறது"
   vibrateOnGameEvents: "விளையாட்டு நிகழ்வுகளில் அதிர்வுறும்"
