--- a/translation/dest/te-IN/mobile-misc.yaml
+++ b/translation/dest/te-IN/mobile-misc.yaml
@@ -1,6 +1,6 @@
 te-IN:
   apiUnsupported: "లిచెస్ యాప్ యొక్క మీ వెర్షన్ చాలా పాతది! దయచేసి తాజా వెర్షన్ కు ఉచితంగా అప్ గ్రేడ్ చేయండి."
-  apiDeprecated: "తాజా లైచెస్ యాప్ కు ఉచితంగా అప్ గ్రేడ్ చేయండి! ఈ వెర్షన్ కు మద్దతు డ్రాప్ చేయబడుతుంది"
+  apiDeprecated: "తాజా లైచెస్ యాప్ కు ఉచితంగా అప్ గ్రేడ్ చేయండి! ఈ వెర్షన్ మద్దతు %s కు డ్రాప్ చేయబడుతుంది."
   comments: "వ్యాఖ్యలు"
   gameInformation: "ఆట సమాచారం"
   home: "హోమ్"
@@ -22,3 +22,4 @@ te-IN:
   shareGameUrl: 'గేమ్ యుఆర్ఎల్ పంచుకోండి'
   playOnline: "ఆన్ లైన్ లో ప్లే చేయండి"
   playOffline: "ఆఫ్ లైన్ ప్లే చేయండి"
+  bgThemeSyncWithSystem: "సర్వర్‌తో సమకాలికరించండి" #Settings to synchronise background theme (dark or light) with the operating system (to support daynight automatic switch)
