--- a/translation/dest/ko-KR/mobile-misc.yaml
+++ b/translation/dest/ko-KR/mobile-misc.yaml
@@ -17,6 +17,7 @@ ko-KR:
   positionLeft: "왼쪽" #As in "left-hand side"; not political or past participle
   landscapeBoardSide: "보드 스크린 위치(가로 모드에서)" #Side of the screen the board appears on in analysis or online rounds when the device is in landscape mode.
   toggleSound: "소리 켜기/끄기" #Settings to enable/disable sound
+  overTheBoard: "로컬 게임"
   sharePgn: "PGN 공유"
   shareGameUrl: '게임 URL 공유'
   playOnline: "온라인 플레이"
