--- a/translation/dest/fo-FO/mobile-misc.yaml
+++ b/translation/dest/fo-FO/mobile-misc.yaml
@@ -1,1 +1,24 @@
 fo-FO:
+  apiUnsupported: "Tín Lichess-app er ov gomul! Vinarliga uppstiga til nýggjastu útgávu ókeypis."
+  apiDeprecated: "Uppstiga ókeypis til nýggjastu Lichess-appina! Henda útgava verður ikki stuðlað longur aftaná %s."
+  comments: "Viðmerkingar"
+  gameInformation: "Talvupplýsingar"
+  home: "Heim"
+  lastScore: "Seinasta stigatal: %s"
+  playerisInvitingYou: "%s bjóðar tær inn"
+  unsupportedVariant: "Variantur %s verður ikki stuðlað í hesari útgávu"
+  notesSynchronizationHasFailed: "Uppritasamstilling við Lichess miseydnaðist, royn aftur seinni."
+  offline: "Offline"
+  otbUseSymmetricPieces: "Nýtt symmetrisk talvfólk" #Setting for offline over-the-board games
+  otbFlipPiecesAndInfoAfterMove: "Vend fólk og mótleikaraupplýsingar aftaná at hava leikt" #Setting for offline over-the-board games
+  settingsClockPosition: "Klokkupositión" #Determines whether each player's time is shown on the left or right side of the board
+  positionRight: "Høgri" #As in "right-hand side"; not truth, morality, or law
+  positionLeft: "Vinstri" #As in "left-hand side"; not political or past participle
+  landscapeBoardSide: "Skermsíða hjá borðinum (liggjandi)" #Side of the screen the board appears on in analysis or online rounds when the device is in landscape mode.
+  toggleSound: "Slá ljóð til/frá" #Settings to enable/disable sound
+  overTheBoard: "Yvir borðinum"
+  sharePgn: "Deil PGN"
+  shareGameUrl: 'Deil talv-URL'
+  playOnline: "Spæl online"
+  playOffline: "Spæl offline"
+  bgThemeSyncWithSystem: "Samstil við stýriskipanini" #Settings to synchronise background theme (dark or light) with the operating system (to support daynight automatic switch)
