--- a/translation/dest/uk-UA/mobile-misc.yaml
+++ b/translation/dest/uk-UA/mobile-misc.yaml
@@ -1,6 +1,6 @@
 uk-UA:
-  apiUnsupported: "Ваша версія Lichess занадто стара! Будь ласка, оновіть програму до останньої версії."
-  apiDeprecated: "Оновлення до останньої версії Lichess безкоштовне! Підтримка поточної версії буде зупинена %s."
+  apiUnsupported: "Your version of lichess app is too old! Please upgrade for free to the latest version."
+  apiDeprecated: "Оновлення до останньої версії Lichess безкоштовне! Підтримка поточної версії буде зупинена"
   comments: "Коментарі"
   gameInformation: "Інформація про гру"
   home: "Головна"
